基本功能完成，包括预览等...

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -94,6 +94,7 @@
     display: none;
 }
 
+/*
 .section-prev{
     margin-left: 50%;
     width: 50%;
@@ -102,4 +103,4 @@
 .section-prev-change{
     width: 50%;
     border-right: 1px solid lightgray;
-}
+}*/
