--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -1,4 +1,4 @@
-.u-markdown{
+.u-markdown {
     width: 100%;
     height: 100%;
     border: none;
@@ -6,4 +6,12 @@
     resize: none;
     padding: 1em;
     color: hsl(116, 30%, 36%);
+}
+
+.u-markdown-prev {
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+    color: hsl(116, 30%, 36%);
+    overflow-y: scroll;
 }
